--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
-    "@purefi/verifier-widget": "^1.3.1",
+    "@purefi/verifier-widget": "^1.3.2",
     "bootstrap": "^4.6.0",
     "ethers": "^5.5.3",
     "react": "17.0.2",
@@ -32,5 +32,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "volta": {
+    "node": "16.14.0",
+    "yarn": "1.22.19"
+  }
 }
